--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/PawelS1988/goit-js-hw-08.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Paweł Szatkowski <szatkowskipawel1988@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/PawelS1988/goit-js-hw-08/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
@@ -28,6 +28,6 @@
   "dependencies": {
     "@vimeo/player": "^2.16.1",
     "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.9.0"
+    "simplelightbox": "^2.8.1"
   }
 }
