--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "## Скрытые файлы",
   "main": "index.js",
-  "homepage": "https://pawels1988.github.io/goit-js-hw-08/",
+  "homepage": "https://mkubera.github.io/goit-js-hw-09/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
